# RayTracer2

./: .gitignore  Cargo.toml  compile.sh  imgui.ini  launch.sh
models/: Helena.vox  VoxelGraveyard_DemoScene.vox  boxes.vox  cube.vox  dragon.vox  light_test_scene.vox  room.vox  test.vox  tree.vox
src/: camera.rs  components.rs  context.rs  light_passes.rs  main.rs  mip_pass.rs  model.rs  oct_tree.rs  pipeline.rs  pipelines.rs  player.rs  postprocess.rs  prepare_lights.rs  render_recources.rs  render_resources.rs  render_system.rs  renderer.rs  rendergraph.rs  shader_params.rs  test.txt  ui.rs
src/gltf/: image.rs  mod.rs
src/renderer/: g_buffer_pass.rs  gizzmos_pass.rs  mod.rs  oct_tree.rs  post_processing_pass.rs  render_resources.rs  renderer.rs
src/shaders/: GBufferHelpers.glsl  Helpers.glsl  Hit.glsl  LightShaping.glsl  PolymorphicLight.glsl  PrimaryRays.glsl  RtxdiApplicationBridge.glsl  ShaderParameters.glsl  ShaderProperties.glsl  ShadingHelpers.glsl  beam.frag  beam.frag.spv  common.glsl  default.frag  default.frag.spv  default.vert  default.vert.spv  env_mip_levels.comp  env_mip_levels.comp.spv  finalShadingHelpers.glsl  hash_map.glsl  inferance.comp  inferance.comp.spv  mip_levels.comp.spv  mips.glsl  oct_tree.glsl  packing.glsl  post_processing.comp  post_processing.comp.spv  post_processing.frag  post_processing.frag.spv  post_processing.vert.spv  prepare_lights.comp  prepare_lights.comp.spv  presample_environment.comp  presample_environment.comp.spv  presample_locallights.comp  presample_locallights.comp.spv  raygen.rgen  raygen.rgen.spv  (+27 more)
src/shaders/g_buffer_pass/: beam_coarse.comp  beam_fine.frag  g_buffer.glsl
src/shaders/generate_mip_levels/: mip_levels.comp
src/shaders/lighting_passes/: RtxdiApplicationBridge.glsl  brdf_rays.rgen  di_final_shading.rgen  di_fused_resampling.rgen  di_initial_sampling.rgen  g_buffer.rgen  gi_final_shading.rgen  (+10 more)
(+16 files in other folders)
