[package]
name = "RayTracer2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
ash = { version = "0.37.3", features = ["loaded", "debug"] }
ash-window = "0.12.0"
clippy = "0.0.302"
glam = "0.24.2"
gltf = "1.0"
gpu-allocator = { version = "0.21", default-features = false, features = ["vulkan"] }
image = "0.24.8"
log = "0.4.20"
memoffset = "0.9.0"
once_cell = "1.19.0"
rand = "0.8.5"
raw-window-handle = "0.5.0"
simple_logger = "4.3.3"
thiserror = "1.0.56"
winit = "0.28.7"

[profile.dev.package."*"]
codegen-units = 1 # better optimizations
opt-level = 2

[profile.dev.package.ash]
opt-level = 0
