[package]
name = "RayTracer2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
ash = { version = "0.38.0+1.3.281", features = ["loaded", "debug"] }
ash-window = "0.13.0"
bevy_a11y = "0.13.2"
bevy_app = "0.13.2"
bevy_core = "0.13.2"
bevy_ecs = "0.13.2"
bevy_input = "0.13.2"
bevy_time = "0.13.2"
bevy_window = "0.13.2"
bevy_winit = {version = "0.13.2", features = ["wayland", "x11"]}
clippy = "0.0.302"
dot_vox = "5.1.1"
glam = "0.28.0"
gltf = "1.0"
gpu-allocator = { version = "0.26", default-features = false, features = ["vulkan"] }
image = "0.25.1"
log = "0.4.20"
memoffset = "0.9.0"
once_cell = "1.19.0"
rand = "0.8.5"
raw-window-handle = "0.6.2"
simple_logger = "5.0.0"
thiserror = "1.0.56"
# winit = "0.28.7"

[patch.crates-io]
gpu-allocator = { git = 'https://github.com/Traverse-Research/gpu-allocator' }

[profile.dev.package."*"]
codegen-units = 1 # better optimizations
opt-level = 2

[profile.dev.package.ash]
opt-level = 0
